--- a/webpage/src/result/result.css
+++ b/webpage/src/result/result.css
@@ -1,32 +1,58 @@
-$hot: hsl(0, 100%, 90%);
+$hot: hsl(0, 100%, 95%);
+
+body {
+    font-size: 16px;
+    font-family: sans-serif;
+    margin: 2%;
+}
 
 .hot {
     background: $hot;
     padding: 1px 3px;
 }
 
-.sample>div {
-    float: left;
-}
-
 .sample {
-    margin: 10px auto;
-    overflow: auto;
-    clear: both;
+    padding: 1em 0;
 }
 
-div.clean {
-    width: 46%;
+.sample>div {
+    height: auto;
+    padding: 0.5em 0;
+    overflow: hide;
 }
 
-div.label {
-    width: 4%;
-}
+@media screen and (min-width: 800px) {
+    .sample>div {
+        float: left;
+    }
 
-div.wmd {
-    width: 4%;
-}
+    .sample {
+        margin: 1em auto;
+        overflow: auto;
+        clear: both;
+    }
 
-div.adversarial {
-    width: 46%;
+    .sample:after {
+        clear: both;
+        content: "";
+        display: table;
+    }
+
+    div.clean {
+        width: 40%;
+    }
+
+    div.label {
+        min-width: 4em;
+        width: 5%;
+    }
+
+    div.wmd {
+        min-width: 4em;
+        width: 5%;
+    }
+
+    div.adversarial {
+        width: 40%;
+    }
 }
